package com.matzua.jpg.core.app;

public interface IGameLoop {
    void update();
}
