package com.matzua.jpg.core.sys;

public interface ProcessingAPI {
    AbstractApp app();
}
